Atualização do logotipo Indie Hackers

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -330,7 +330,7 @@
       <li>
         <a href="https://www.indiehackers.com/products" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/16711932_1370501686378035_8249126912425636107_n.jpg?_nc_cat=106&_nc_sid=dbb9e7&_nc_eui2=AeHlpgoP3hJTiZChZLybxaMeSVGU-saJw3ZJUZT6xonDdvF1eGEO8hkBwCJOIrwMtpWkJzZOu23345P5yG3KAkfZ&_nc_ohc=O6WdWHCMWSMAX91XXHQ&_nc_ht=scontent.fcwb2-1.fna&oh=b2a8075fa32dbca2ea2b335f6e54fedc&oe=5F1C74CD" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/16711932_1370501686378035_8249126912425636107_n.jpg?_nc_cat=106&_nc_sid=1eb0c7&_nc_ohc=zKixPMGdq7oAX-OuK4T&_nc_ht=scontent.fcwb2-1.fna&tp=6&oh=2d3d410c4ac02409d67bfeabff7a5faa&oe=5F79C8EB" alt="#" />
           </div>
         </a>
         <div class="resource-details">
