Atualização logotipo do React JS

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -927,7 +927,7 @@
       <li>
         <a href="https://reactjs.org/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/1010076_477783955633350_1900224762_n.png?_nc_cat=109&_nc_sid=dbb9e7&_nc_ohc=Nx_hugYuUVAAX8aho9Z&_nc_ht=scontent.fcwb2-2.fna&oh=3bfa65da4ea569b1ebdbb877a0b545fa&oe=5F45000B" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/1010076_477783955633350_1900224762_n.png?_nc_cat=109&_nc_sid=1eb0c7&_nc_ohc=hU-o6rDWWFwAX94p5DH&_nc_ht=scontent.fcwb2-2.fna&oh=a21db8d4153c7fe8abda2296b6b01b4c&oe=5F786A8B" alt="#" />
           </div>
         </a>
         <div class="resource-details">
