--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1137,6 +1137,21 @@
       </li>
 
       <li>
+        <a href="https://lottiefiles.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/51095779_2321977624480504_6775227806117789696_o.jpg?_nc_cat=107&_nc_sid=1eb0c7&_nc_ohc=2C8mNdTt9zQAX-xuzS4&_nc_ht=scontent.fcwb2-2.fna&tp=6&oh=ac02193ace42442a304e534b32bf47f0&oe=5F7B06A6" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://lottiefiles.com/" target="_blank">LottieFiles</a>
+          </h2>
+          <p>The Future of Animation and Interactive Design is here</p>
+        </div>
+        <a class="resource-button" href="https://lottiefiles.com/" target="_blank">Veja</a>
+  		</li>
+
+      <li>
         <a href="http://mynameismatthieu.com/WOW/" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/wow-animate.jpg" alt="#" />
