Atualização logotipo do Nucleoapp - Icon Organizer and Icon Library

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1494,7 +1494,7 @@
       <li>
         <a href="https://nucleoapp.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/17759967_1242890822497106_1662123643343366018_n.png?_nc_cat=100&_nc_sid=dbb9e7&_nc_eui2=AeF29ERfz3-GuITATdq5CEV7kD6gwMyYu6WQPqDAzJi7pT6m47YXJKFZ5jjKBfxNfy7f0FkGe6PsdY-xz28r4-K6&_nc_ohc=jFOlVqGIYv8AX8HuHze&_nc_ht=scontent.fcwb2-2.fna&oh=f7954e126f344fd529f9cd423d06803c&oe=5F19F34A" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/17759967_1242890822497106_1662123643343366018_n.png?_nc_cat=100&_nc_sid=1eb0c7&_nc_ohc=2_QDJMXeaWgAX_yMFdG&_nc_ht=scontent.fcwb2-2.fna&oh=2d873c293ea8b3e4b6b5609f516a4326&oe=5F787EF0" alt="#" />
           </div>
         </a>
         <div class="resource-details">
