Adicionando Logotipo do Beeceptor - Rest API mocking and Intercepting in seconds

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1669,7 +1669,7 @@
       <li>
         <a href="https://beeceptor.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/heroku.jpg" alt="#" />
+            <img src="../../base/images/beeceptor.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
