Atualização logotipo do Docker

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2674,7 +2674,7 @@
       <li>
         <a href="https://www.docker.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p480x480/65467832_2420859664814819_2002543499785797632_o.png?_nc_cat=102&_nc_sid=dbb9e7&_nc_eui2=AeEtLPEpDIaXBD44kduJPZVRpr5CfTd1zSKmvkJ9N3XNIg81u6n8Yw50kniaZa3RCxSAcYhpRiYyoRIXUwfAnSdl&_nc_ohc=Nrx8dch8XjwAX_NbKP7&_nc_ht=scontent.fcwb2-1.fna&oh=298dc5d0f94061211d18b2e60326262e&oe=5F1B35D7" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/65467832_2420859664814819_2002543499785797632_o.png?_nc_cat=102&_nc_sid=1eb0c7&_nc_ohc=yRriQeqMbUgAX8erl9P&_nc_ht=scontent.fcwb2-1.fna&oh=1582c540c90b6b6b9c9b6d611a358f89&oe=5F7B0F12" alt="#" />
           </div>
         </a>
         <div class="resource-details">
