Atualização logotipo do Web Design Ledger

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3035,7 +3035,7 @@
       <li>
         <a href="https://webdesignledger.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p480x480/11960268_1014046558615593_1972434264799813720_n.png?_nc_cat=110&_nc_sid=dbb9e7&_nc_eui2=AeH9zjwfCv3tm3IOPy80xPU_Q0cIL195qJdDRwgvX3molzTZPFDdy76T-m0yNGpmHWBUdjOejU9CHUd1FmwplNDY&_nc_ohc=Les7TtuzaJoAX9kiNMp&_nc_ht=scontent.fcwb2-2.fna&oh=146a8ad4190da307a1c7c6630ea2176f&oe=5F1B517E" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/11960268_1014046558615593_1972434264799813720_n.png?_nc_cat=110&_nc_sid=1eb0c7&_nc_ohc=SkTYsz7pFDIAX83Dx3m&_nc_ht=scontent.fcwb2-2.fna&oh=d60e87f2db64e653b4e87d3172b2ddb7&oe=5F7A58BB" alt="#" />
           </div>
         </a>
         <div class="resource-details">
