--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3050,7 +3050,7 @@
       <li>
         <a href="https://codesignal.com/blog/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p480x480/19366636_1910380532550479_6227367408235417755_n.png?_nc_cat=106&_nc_sid=dbb9e7&_nc_eui2=AeF33wUX89dJyEWgEvsXDoEfqs1CSXtfZbCqzUJJe19lsFNgbEZCi6tTyE43afWqss43UZ6GTAvNPg16ExeEKYZ_&_nc_ohc=Pdi0P0YDBC4AX9mOwPQ&_nc_ht=scontent.fcwb2-1.fna&oh=085fe74bc41d5b09add3df8f4e75d2eb&oe=5F1C0447" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/19366636_1910380532550479_6227367408235417755_n.png?_nc_cat=106&_nc_sid=1eb0c7&_nc_ohc=mfbhJhhjdD0AX8cD7o5&_nc_ht=scontent.fcwb2-1.fna&oh=f076e28ee3f45736bb5bb233c2c3dd32&oe=5F7A9B82" alt="#" />
           </div>
         </a>
         <div class="resource-details">
