Correção do nome e logotipo do Blog Web Design Depot

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3065,7 +3065,7 @@
       <li>
         <a href="https://www.webdesignerdepot.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/24862500_10155087920666451_2007059699721631428_n.png?_nc_cat=110&_nc_sid=dbb9e7&_nc_eui2=AeHclw82oH5nuWHlnK_O3f6JEqkHD88G1F4SqQcPzwbUXmIqDBH5EHr-VZriqoujNUBnWBddHgmTOhi8I5y-sOCl&_nc_ohc=oP68QwsBeFAAX_5d8LW&_nc_ht=scontent.fcwb2-2.fna&oh=584323b0d43305a101e43eb851a37f90&oe=5F192A8E" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/24862500_10155087920666451_2007059699721631428_n.png?_nc_cat=110&_nc_sid=1eb0c7&_nc_ohc=8kXAX5YD-rAAX-jB8hq&_nc_ht=scontent.fcwb2-2.fna&oh=c3f3c0c85238f309c6156957587ff2ad&oe=5F786E57" alt="#" />
           </div>
         </a>
         <div class="resource-details">
