--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3070,7 +3070,7 @@
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://www.webdesignerdepot.com/" target="_blank">Web Designer Depot</a>
+            <a href="https://www.webdesignerdepot.com/" target="_blank">Web Design Depot</a>
           </h2>
           <p>Blogs</p>
         </div>
@@ -3095,7 +3095,7 @@
       <li>
         <a href="https://cssauthor.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p480x480/15420771_1563459993667829_3881871322970380143_n.jpg?_nc_cat=107&_nc_sid=dbb9e7&_nc_eui2=AeH3dEA5vVPbbeO-J6gwaRQEULyCrOZxKfxQvIKs5nEp_OEfxoOnoHW7KvGee2qcSeBUF0FDCbPj2nNicv2SgcFJ&_nc_ohc=JU0pWd7KxmgAX-7rTiH&_nc_ht=scontent.fcwb2-2.fna&_nc_tp=6&oh=c3b3e7324e0d94e9de7d51ac90b83fcf&oe=5F1CAC4C" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/15420771_1563459993667829_3881871322970380143_n.jpg?_nc_cat=107&_nc_sid=1eb0c7&_nc_ohc=CP7p1baZmOkAX-woioV&_nc_ht=scontent.fcwb2-2.fna&tp=6&oh=f53f29562393aa61f8d172efb929c257&oe=5F7B1C0D" alt="#" />
           </div>
         </a>
         <div class="resource-details">
