Correção do nome do blog Jonathan Harrell e adicionando logotipo ao mesmo

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3110,12 +3110,12 @@
       <li>
         <a href="https://www.jonathan-harrell.com/blog/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/jonathanharrellblog.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://www.jonathan-harrell.com/blog/" target="_blank">Css Author</a>
+            <a href="https://www.jonathan-harrell.com/blog/" target="_blank">Jonathan Harrell</a>
           </h2>
           <p>Blogs</p>
         </div>
