Atualização do logotipo do Free Code Camp

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3413,7 +3413,7 @@
       <li>
         <a href="https://learn.freecodecamp.org" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/12439144_1738400546393339_7527358456954625324_n.png?_nc_cat=105&_nc_sid=dbb9e7&_nc_ohc=wp-BbkblcpEAX9MNSxo&_nc_ht=scontent.fcwb2-1.fna&oh=d6a52e07850e1b47915cd9096888cc00&oe=5F2CA901" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/29177028_2059455867661119_3397858896855957504_n.png?_nc_cat=105&_nc_sid=1eb0c7&_nc_ohc=DVdIP45P2AYAX8Aav1N&_nc_ht=scontent.fcwb2-1.fna&oh=b689fda2e2d9e5c05fccf2a56e73259c&oe=5F7AB3DC" alt="#" />
           </div>
         </a>
         <div class="resource-details">
