Glaze - Free illustrations, for everything

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1318,6 +1318,22 @@
 				<div id="mockups"></div>
 			</li>
 
+			<li>
+				<div class="resource-icon">
+					<a href="https://www.glazestock.com/" target="_blank">
+						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> 
+						<a href="https://www.glazestock.com/" target="_blank">Glaze</a>
+					</h2>
+					<p>Free illustrations, for everything</p>
+				</div>
+				<a class="resource-button" href="https://www.glazestock.com/" target="_blank">Veja</a>				
+				<div id="mockups"></div>
+			</li>
+
 			<div class="linha"></div>
 			<h2 class="margen-titulo color-apoio">Mockups</h2>
 			<div class="linha"></div>
