humaaans - Mix and match illustrations of people with a design library

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1330,7 +1330,22 @@
 					</h2>
 					<p>Free illustrations, for everything</p>
 				</div>
-				<a class="resource-button" href="https://www.glazestock.com/" target="_blank">Veja</a>				
+				<a class="resource-button" href="https://www.glazestock.com/" target="_blank">Veja</a>								
+			</li>
+
+			<li>
+				<div class="resource-icon">
+					<a href="https://www.humaaans.com/?fbclid=IwAR0H0uoWakJc0-AgJVE_d2cFqCZ3LE0uBZ4Vy9EbBM1Ekyz6KR6bshGWMak" target="_blank">
+						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> 
+						<a href="https://www.humaaans.com/?fbclid=IwAR0H0uoWakJc0-AgJVE_d2cFqCZ3LE0uBZ4Vy9EbBM1Ekyz6KR6bshGWMak" target="_blank">humaaans</a>
+					</h2>
+					<p>Mix-&-match illustrations of people with a design library</p>
+				</div>
+				<a class="resource-button" href="https://www.humaaans.com/?fbclid=IwAR0H0uoWakJc0-AgJVE_d2cFqCZ3LE0uBZ4Vy9EbBM1Ekyz6KR6bshGWMak" target="_blank">Veja</a>				
 				<div id="mockups"></div>
 			</li>
 
