Atualização do logotipo do Blog Implantando o Marketing

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -46,7 +46,7 @@
       <li>
         <a href="https://www.implantandomarketing.com" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p320x320/10443438_834970836554408_8708284076846395352_n.jpg?_nc_cat=110&_nc_sid=dbb9e7&_nc_ohc=g5N5yuaS2I4AX9q_o2k&_nc_ht=scontent.fbfh14-1.fna&_nc_tp=6&oh=062f1563d09c143a65ac68d5aa1eccdf&oe=5ECAE72F" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p148x148/10443438_834970836554408_8708284076846395352_n.jpg?_nc_cat=110&_nc_sid=1eb0c7&_nc_ohc=qujS9c7KUcQAX-_zF9p&_nc_ht=scontent.fcwb2-2.fna&tp=6&oh=4131aae331b8072f435aa16875400e41&oe=5F7EDB2A" alt="#" />
           </div>
         </a>
         <div class="resource-details">
