--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -211,7 +211,7 @@
       <li>
         <a href="https://www.publicitarioscriativos.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/15032643_1353020718049826_2846259359469285587_n.png?_nc_cat=107&_nc_ohc=8sM4R06vurUAQkpfgDdQmtMUyy3CtT3lFHF-D8AeX8_sf20-6qxpHkquw&_nc_ht=scontent.fcwb1-1.fna&oh=a0f2bc7dc5d4e4d25a950b3548032547&oe=5EA909D5" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p148x148/15032643_1353020718049826_2846259359469285587_n.png?_nc_cat=107&_nc_sid=1eb0c7&_nc_ohc=DN6Qc1jWAfkAX-Bxrz7&_nc_ht=scontent.fcwb2-2.fna&oh=e94da091c5a9f6a2e6e310723483f3db&oe=5F803EF7" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -241,7 +241,7 @@
       <li>
         <a href="https://marketingdeconteudo.com/blogs-sobre-marketing/?utm_content=77161851&utm_medium=social&utm_source=twitter" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/67496708_1343133669183237_5266201796971331584_n.png?_nc_cat=105&_nc_ohc=XkR9MgFXMdsAQltqsVHTDsWazoI1zpiqbQO-WmiTUFQcrQ0gjwj6qTdlw&_nc_ht=scontent.fcwb1-1.fna&oh=c297f6623e5f2da68b68c06978b94dc6&oe=5E9FCED3" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/87420283_1550048801825055_4810834662576357376_n.png?_nc_cat=103&_nc_sid=1eb0c7&_nc_ohc=wtw4hEFaA9gAX9vUttY&_nc_ht=scontent.fcwb2-1.fna&oh=fd1c51f8228564a263f8f6655250b3d2&oe=5F7F8B0E" alt="#" />
           </div>
         </a>
         <div class="resource-details">
