--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -309,7 +309,7 @@
       <li>
         <a href="https://designculture.com.br/3-livros-essenciais-para-comecar-a-entender-de-marketing/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/49184543_2476772522338289_2418004654219591680_o.jpg?_nc_cat=109&_nc_ohc=0ZhsvysQoZsAQmkuL60BohnkbsCqSLmEOviiJeZg9dxYRkvPLg6bNoxMw&_nc_ht=scontent.fcwb2-2.fna&oh=ae5e9064b2bd6e710894f21031f70702&oe=5E9A6DA5" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/49184543_2476772522338289_2418004654219591680_o.jpg?_nc_cat=109&_nc_sid=1eb0c7&_nc_ohc=A-raCFP2l_EAX8bgIwI&_nc_ht=scontent.fcwb2-2.fna&tp=6&oh=1448d7dcb451644fe7e9bde6d62b6a0c&oe=5F80CEDB" alt="#" />
           </div>
         </a>
         <div class="resource-details">
