Atualização do logotipo do Blog do Google

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -354,7 +354,7 @@
       <li>
         <a href="https://learndigital.withgoogle.com/ateliedigital" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/28468521_1812606625709938_6044956846867882547_n.png?_nc_cat=1&_nc_ht=scontent.fcwb1-1.fna&oh=a32bea834efe1c31eda4ebee29951b3e&oe=5D364E0F" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/82929329_2257881727849090_3300101949390585856_n.png?_nc_cat=1&_nc_sid=1eb0c7&_nc_ohc=l_Ut6DfWJJAAX8Mhjlx&_nc_ht=scontent.fcwb2-2.fna&oh=494ff0df77a13ff9b1e05a6fcb02cac1&oe=5F7E757A" alt="#" />
           </div>
         </a>
         <div class="resource-details">
