--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -373,7 +373,7 @@
       <li>
         <a href="https://br.mautic.org" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/10583979_1537645006454853_5446066427502251888_n.png?_nc_cat=109&_nc_ohc=XEM9AtRUw-kAQmNwKbKKFygl1R56I0WiCKOJ5jpfNZTl9MuTL4kxzFUVA&_nc_ht=scontent.fcwb1-1.fna&oh=e2a89f40576fa7f6e92888acb2bdbb36&oe=5EA0973D" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/10583979_1537645006454853_5446066427502251888_n.png?_nc_cat=109&_nc_sid=1eb0c7&_nc_ohc=IhF8By2ACGgAX9pO5Ud&_nc_ht=scontent.fcwb2-2.fna&oh=1bc24bc431bd5cb54ae5788f1dca404d&oe=5F7E99C3" alt="#" />
           </div>
         </a>
         <div class="resource-details">
