Atualização logitpo MailChimp

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -388,7 +388,7 @@
       <li>
         <a href="https://mailchimp.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/12688245_697669143706208_1707931773508486678_n.png?_nc_cat=101&_nc_ohc=8IltJ-QHDbwAQm_1vKY80smUanvwuuHSG-VrKGVHyrTDSqjfl0drsKn2A&_nc_ht=scontent.fcwb2-1.fna&oh=bfe08a1525b331aad1de8965622198f7&oe=5E6728B4" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/42600271_10155776890365777_3995720217064898560_n.jpg?_nc_cat=1&_nc_sid=1eb0c7&_nc_ohc=aaJLIXp22NUAX_fPJjA&_nc_ht=scontent.fcwb2-2.fna&tp=6&oh=ef8e0a79f17e2c90a85e4dbb4a176b53&oe=5F8138B4" alt="#" />
           </div>
         </a>
         <div class="resource-details">
