--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -403,7 +403,7 @@
       <li>
         <a href="https://trello.com" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t31.0-1/p320x320/20424264_1506678039410436_2666103600142426171_o.png?_nc_cat=100&_nc_ohc=Jg3-8y-xuKMAQnNq6OgKvkQW5Zcbk_XlYKKIvTysTUSDE_puObY_yZEOw&_nc_ht=scontent.fcwb1-1.fna&oh=dd74351884d0b9fa8c89b3007ec1dfd0&oe=5E9822B2" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t31.0-1/p148x148/20424264_1506678039410436_2666103600142426171_o.png?_nc_cat=100&_nc_sid=1eb0c7&_nc_ohc=pqfFD3d7Na4AX8d01a2&_nc_ht=scontent.fcwb2-2.fna&oh=ab8f22eac05f8309a04535a727f27d98&oe=5F7FFABB" alt="#" />
           </div>
         </a>
         <div class="resource-details">
