ATualização do logotipo do Blog Hongkiat

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -418,7 +418,7 @@
       <li>
         <a href="https://www.wunderlist.com/pt/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/10527513_716367458435177_3415168436016874663_n.png?_nc_cat=106&_nc_ohc=0JwV7BaJPeIAX9Ic2qT&_nc_ht=scontent.fbfh14-2.fna&oh=2a42f68af2b6cc2a80377bb8166981e8&oe=5EB11310" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/10527513_716367458435177_3415168436016874663_n.png?_nc_cat=106&_nc_sid=1eb0c7&_nc_ohc=YTk-N2Mof0wAX-Zww6W&_nc_ht=scontent.fcwb2-1.fna&oh=0b822f3dadfc53fc0ac9605745bb9e7b&oe=5F81E470" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -448,7 +448,7 @@
       <li>
         <a href="https://marketingdeconteudo.com/ferramentas-digitais-para-ambiente-de-trabalho/?utm_content=58895626&utm_medium=social&utm_source=twitter" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/36931364_1036299226533351_7053254834622824448_n.png?_nc_cat=108&_nc_ht=scontent.fcwb1-1.fna&oh=05f318f0789731de0bc4680537bba671&oe=5D38CFC3" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/10703722_10152715387648592_9110221371601185088_n.png?_nc_cat=108&_nc_sid=1eb0c7&_nc_ohc=zk_lICQKU2EAX_7XR2x&_nc_ht=scontent.fcwb2-2.fna&oh=145ffe4497f0c5be8fe80735ecd77ef6&oe=5F7F3728" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -478,7 +478,7 @@
       <li>
         <a href="https://www.hongkiat.com/blog/hashtag-tools-for-marketing/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/10703722_10152715387648592_9110221371601185088_n.png?_nc_cat=108&_nc_ht=scontent.fcwb1-1.fna&oh=48fb29c343082e05c4267934c031cdda&oe=5D39C442" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/10703722_10152715387648592_9110221371601185088_n.png?_nc_cat=108&_nc_sid=1eb0c7&_nc_ohc=zk_lICQKU2EAX_7XR2x&_nc_ht=scontent.fcwb2-2.fna&oh=145ffe4497f0c5be8fe80735ecd77ef6&oe=5F7F3728" alt="#" />
           </div>
         </a>
         <div class="resource-details">
