Atualização do logotipo do site Seeking Alpha

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -563,7 +563,7 @@
       <li>
         <a href="https://seekingalpha.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/11667346_853047441454404_7962724702641437828_n.png?_nc_cat=101&_nc_sid=dbb9e7&_nc_ohc=DKIm4osr_KgAX-TN7vQ&_nc_ht=scontent.fbfh14-1.fna&oh=fb0f70a67c4306c69a9760c619ee6118&oe=5E99CCC5" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/11667346_853047441454404_7962724702641437828_n.png?_nc_cat=101&_nc_sid=1eb0c7&_nc_ohc=xDXUeA9ksmgAX-_pEBg&_nc_ht=scontent.fcwb2-1.fna&oh=741fdcd6f600882e96e3fb298cff55fe&oe=5F7F31C5" alt="#" />
           </div>
         </a>
         <div class="resource-details">
