--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -578,7 +578,7 @@
       <li>
         <a href="https://www.hoyacapital.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p200x200/54255807_2002383649858917_762460195161899008_o.jpg?_nc_cat=105&_nc_sid=dbb9e7&_nc_ohc=ooloVR53nTAAX-p_Pi7&_nc_ht=scontent.fbfh14-2.fna&_nc_tp=6&oh=21d866c93c2d9526227bf8b8a385e5b9&oe=5E9901ED" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/54255807_2002383649858917_762460195161899008_o.jpg?_nc_cat=105&_nc_sid=1eb0c7&_nc_ohc=g_CAFmy02L8AX8zXslE&_nc_ht=scontent.fcwb2-1.fna&tp=6&oh=081960858fde4f0cb830e5f93fe9429d&oe=5F811F84" alt="#" />
           </div>
         </a>
         <div class="resource-details">
