Atualização do logotipo do site Market Watch

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -608,7 +608,7 @@
       <li>
         <a href="https://www.marketwatch.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t31.0-1/p320x320/12768328_10153561039566848_8671990754845590351_o.png?_nc_cat=1&_nc_sid=dbb9e7&_nc_ohc=n1DDHz_9PbwAX_PPfZ0&_nc_ht=scontent.fbfh14-2.fna&oh=da3b59be258c7ac392f22ca90df47414&oe=5E9A4DFF" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t31.0-1/p320x320/12768328_10153561039566848_8671990754845590351_o.png?_nc_cat=1&_nc_sid=1eb0c7&_nc_ohc=_FPqNKjVjt0AX83qnTe&_nc_ht=scontent.fcwb2-2.fna&oh=f8019c60742e9ba0849885e26ef8d5c7&oe=5F7FB2FF" alt="#" />
           </div>
         </a>
         <div class="resource-details">
