--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -463,7 +463,7 @@
       <li>
         <a href="https://www.hongkiat.com/blog/increase-b2b-sales-tools/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/10703722_10152715387648592_9110221371601185088_n.png?_nc_cat=108&_nc_ht=scontent.fcwb1-1.fna&oh=48fb29c343082e05c4267934c031cdda&oe=5D39C442" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/10703722_10152715387648592_9110221371601185088_n.png?_nc_cat=108&_nc_sid=1eb0c7&_nc_ohc=zk_lICQKU2EAX_7XR2x&_nc_ht=scontent.fcwb2-2.fna&oh=145ffe4497f0c5be8fe80735ecd77ef6&oe=5F7F3728" alt="#" />
           </div>
         </a>
         <div class="resource-details">
