Linktree - The Only Link You'll Ever Need

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -851,6 +851,27 @@
           <p>GetFeedback</p>
         </div>
         <a class="resource-button" href="https://www.getfeedback.com/resources/cx/brand-perception/" target="_blank">Veja</a>
+        <div id="social"></div>
+      </li>
+
+      <div class="linha"></div>
+        <h2 class="margen-titulo color-frontend">Social</h2>        
+      <div class="linha"></div>
+
+      <li>
+        <a href="https://linktr.ee/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/105562020_105861301184307_3502970610997036263_n.png?_nc_cat=106&_nc_sid=1eb0c7&_nc_ohc=NNBob7-_x1EAX-I48CR&_nc_ht=scontent.fcwb2-1.fna&oh=31abcc832a564cab2f5bd43d03e8a6fa&oe=5F7EE916" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://linktr.ee/" target="_blank">Linktree</a>
+          </h2>
+          <p>The Only Link You'll Ever Need</p>
+        </div>
+        <a class="resource-button" href="https://linktr.ee/" target="_blank">Veja</a>
+        <div id="social"></div>
       </li>
 
     </ul>
@@ -867,6 +888,10 @@
              <li><a href="../ebooks/index.html"><div class="circle"></div>Ebooks</a></li>
              <li><a href="../sites/index.html"><div class="circle"></div>Sites</a></li>
              <li><a href="../emailMkt/index.html"><div class="circle"></div>Email MKT</a></li>
+
+             <div class="linha2"></div>           
+              <h2 class="margen-titulo" style="color: #dd9000">Filtro</h2>
+              <li><a class="scroll" href="#social">Social</a></li>              
     
           </ul>    
   	</main>
