Tap My Bio - Never Change the link in your social again. Put a single link in you bio with multiple destinations

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -874,6 +874,22 @@
         <div id="social"></div>
       </li>
 
+      <li>
+        <a href="https://tapmybio.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://tapmybio.com/assets/icon-46eb24a828e5fd52ac9f75e1ddf5643e03b098ac282ec2d4d5c251614b89dec9.png" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://tapmybio.com/" target="_blank">tapmybio</a>
+          </h2>
+          <p>Never change the link in your {Social} bio again. Put a single link in your bio with multiple destinations</p>
+        </div>
+        <a class="resource-button" href="https://tapmybio.com/" target="_blank">Veja</a>
+        <div id="social"></div>
+      </li>
+
     </ul>
       <ul class="sidebar-navigation">
              <li><a href="../apoio/index.html"><div class="circle"></div>Apoio</a></li>	
