Basin - Easily manage all of your hTML forms with a single backend

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1744,13 +1744,33 @@
           <p>Banco de Dados MySQL free com limitações</p>
         </div>
         <a class="resource-button" href="https://br.000webhost.com/" target="_blank">Veja</a>
+        <div id="html-forms"></div>
+      </li>  
+
+      <div class="linha"></div>
+      <h2 class="margen-titulo color-frontend">HTML Forms</h2>
+      <div class="linha"></div>      
+      
+      <li>
+        <a href="https://usebasin.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://pbs.twimg.com/profile_images/1127001874907811840/5MCODRNW_reasonably_small.png" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://usebasin.com/" target="_blank">Basin</a>
+          </h2>
+          <p>Easily manage all of your HTML forms with a single backend</p>
+        </div>
+        <a class="resource-button" href="https://usebasin.com/" target="_blank">Veja</a>
         <div id="documentacao"></div>
       </li>  
 
       <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Documentações</h2>
-      <div class="linha"></div>
-      
+      <div class="linha"></div>   
+
       <li>
         <a href="https://developer.mozilla.org/pt-BR/" target="_blank">
           <div class="resource-icon">
@@ -4016,6 +4036,7 @@
       <li><a class="scroll" href="#pre-processors">Pre-processors</a></li>      
       <li><a class="scroll" href="#hospedagem">Hospedagem</a></li>      
       <li><a class="scroll" href="#bancos">Banco de Dados</a></li>      
+      <li><a class="scroll" href="#html-forms">HTML Forms</a></li>      
       <li><a class="scroll" href="#documentacao">Documentações</a></li>
       <li><a class="scroll" href="#utilitarios">Utilitários</a></li>
       <li><a class="scroll" href="#acessibilidade">Acessibilidade</a></li>
