Jpeg.io - Convert any major image format into a highly optimized JPEG

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -68,6 +68,19 @@
 
 			<li>
 				<div class="resource-icon">
+					<a href="https://www.jpeg.io/" target="_blank">
+						<img src="../../base/images/jpeg-io.jpg" alt="Tiny png" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="https://www.jpeg.io/" target="_blank">Jpeg.io</a> </h2>
+					<p>Convert any major image format into a highly optimized JPEG</p>
+				</div>
+				<a class="resource-button" href="https://www.jpeg.io/" target="_blank">Veja</a>
+			</li>
+
+			<li>
+				<div class="resource-icon">
 					<a href="https://smallpdf.com/pt" target="_blank">
 						<img src="../../base/images/smalldpf.jpg" alt="Small PDF" />
 					</a>
