Blog da Lea Verou - Autora do Livro CSS Secrets - Better Solutions to Everyday web Design Problems

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -540,7 +540,22 @@
           </h2>
           <p>Generate Soft-UI CSS code</p>
         </div>
-        <a class="resource-button" href="https://neumorphism.io" target="_blank">Veja</a>
+        <a class="resource-button" href="https://neumorphism.io" target="_blank">Veja</a>        
+      </li>
+      
+      <li>
+        <a href="https://lea.verou.me/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://lea.verou.me/" target="_blank">Lea Verou</a>
+          </h2>
+          <p>Blog da Lea Verou - Autora do Livro CSS Secrets - Better Solutions to Everyday web Design Problems</p>
+        </div>
+        <a class="resource-button" href="https://lea.verou.me/" target="_blank">Veja</a>
         <div id="arquiteturascss"></div>
       </li>
 
