Atualização logo da Apple

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -48,7 +48,7 @@
       <li>
         <a href="https://developer.apple.com/design/human-interface-guidelines/ " target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t34.0-1/p320x320/38987198_358933588097207_1944168479_n.jpg?_nc_cat=1&_nc_sid=dbb9e7&_nc_eui2=AeHnxZLcqzmZVkSCDuX1Pez2Cle_OgAjgwgKV786ACODCKc1jBLsWLgpM4DYhHDZ0Cc1aW4ktW9flIZQvDR4PVmS&_nc_ohc=dv2EIdC85XAAX-8hIB4&_nc_ht=scontent.fcwb2-1.fna&_nc_tp=6&oh=e42457760ba1f8d31280b64134b8a28f&oe=5F03F4FB" alt="#" />          
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p148x148/109764302_3289428621149720_6353557589794353911_o.png?_nc_cat=1&_nc_sid=1eb0c7&_nc_ohc=zYcuKxc4-qkAX-4L2JO&_nc_ht=scontent.fcwb2-2.fna&oh=940d8038b9346a00bb86da7cf3b44573&oe=5F87C5BE" alt="#" />          
           </div>
         </a>
         <div class="resource-details">
