--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3523,7 +3523,7 @@
       <li>
         <a href="https://www.caelum.com.br/apostilas" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/82188689_10157257044689086_791244971490410496_o.png?_nc_cat=103&_nc_sid=dbb9e7&_nc_ohc=COYakyx8OKkAX8WWpuo&_nc_ht=scontent.fcwb2-1.fna&oh=bf4cd647b9f0e8602ea02fffd4699b84&oe=5EA303D8" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p148x148/82188689_10157257044689086_791244971490410496_o.png?_nc_cat=103&_nc_sid=1eb0c7&_nc_ohc=OrK7QneQil0AX95cPkS&_nc_ht=scontent.fcwb2-1.fna&oh=ab80e7dff1ca2baf2ac18f9f7668617d&oe=5F8AFF21" alt="#" />
           </div>
         </a>
         <div class="resource-details">
