Get Emoji - Copy and Paste Emojis - No apps required

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2810,6 +2810,21 @@
         </div>
         <a class="resource-button" href="https://undraw.co/illustrations" target="_blank">Veja</a>        
       </li>
+      
+      <li>
+        <a href="https://getemoji.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://getemoji.com/" target="_blank">Get Emoji</a>
+          </h2>
+          <p>Copy and Paste Emojis - No apps required</p>
+        </div>
+        <a class="resource-button" href="https://getemoji.com/" target="_blank">Veja</a>        
+      </li>
 
       <div id="acessibilidade"></div>
 
