Conventional Commits - A A specification for adding human and machine readable meaning to commit messages

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2825,6 +2825,21 @@
         </div>
         <a class="resource-button" href="https://getemoji.com/" target="_blank">Veja</a>        
       </li>
+      
+      <li>
+        <a href="https://www.conventionalcommits.org/en/v1.0.0/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.conventionalcommits.org/en/v1.0.0/" target="_blank">Conventional Commits</a>
+          </h2>
+          <p>A specification for adding human and machine readable meaning to commit messages</p>
+        </div>
+        <a class="resource-button" href="https://www.conventionalcommits.org/en/v1.0.0/" target="_blank">Veja</a>        
+      </li>
 
       <div id="acessibilidade"></div>
 
