Github Readme Stats - anuraghazra

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2840,6 +2840,21 @@
         </div>
         <a class="resource-button" href="https://www.conventionalcommits.org/en/v1.0.0/" target="_blank">Veja</a>        
       </li>
+      
+      <li>
+        <a href="https://github.com/anuraghazra/github-readme-stats/blob/master/readme.md" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://github.com/anuraghazra/github-readme-stats/blob/master/readme.md" target="_blank">Github Readme Stats</a>
+          </h2>
+          <p>Get dynamically generated Github Stats on your readmes!</p>
+        </div>
+        <a class="resource-button" href="https://github.com/anuraghazra/github-readme-stats/blob/master/readme.md" target="_blank">Veja</a>        
+      </li>
 
       <div id="acessibilidade"></div>
 
