Update image link BrowserStack

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -149,7 +149,7 @@
       <li>
         <a href="https://www.browserstack.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p148x148/1982139_691507630890849_111257782_n.png?_nc_cat=107&_nc_sid=1eb0c7&_nc_ohc=GpmVHPqXx1wAX87jZJL&_nc_ht=scontent.fcwb2-2.fna&oh=86ad1bfbed9e875306e0a60bde059f62&oe=5F791736" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p148x148/1982139_691507630890849_111257782_n.png?_nc_cat=107&ccb=2&_nc_sid=1eb0c7&_nc_ohc=ixYaPdwimnQAX8ajQZQ&_nc_ht=scontent.fcwb2-2.fna&oh=fb9249b5f56a9a996eddcf4ba8d73b55&oe=5FC83136" alt="#" />
           </div>
         </a>
         <div class="resource-details">
