Update image link Indie Hacker

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -154,7 +154,7 @@
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://www.browserstack.com/" target="_blank">Browser Stack</a>
+            <a href="https://www.browserstack.com/" target="_blank">BrowserStack</a>
           </h2>
           <p>App & Browser Testing Made Easy</p>
         </div>
@@ -330,7 +330,7 @@
       <li>
         <a href="https://www.indiehackers.com/products" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/16711932_1370501686378035_8249126912425636107_n.jpg?_nc_cat=106&_nc_sid=1eb0c7&_nc_ohc=zKixPMGdq7oAX-OuK4T&_nc_ht=scontent.fcwb2-1.fna&tp=6&oh=2d3d410c4ac02409d67bfeabff7a5faa&oe=5F79C8EB" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/16711932_1370501686378035_8249126912425636107_n.jpg?_nc_cat=106&ccb=2&_nc_sid=1eb0c7&_nc_ohc=IIqiBJueGFQAX-aVefh&_nc_ht=scontent.fcwb2-1.fna&tp=6&oh=44e2cb547487e314979638b04d359f1c&oe=5FC4EE6B" alt="#" />
           </div>
         </a>
         <div class="resource-details">
