--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3130,7 +3130,7 @@
       <li>
         <a href="https://webdesignledger.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/11960268_1014046558615593_1972434264799813720_n.png?_nc_cat=110&_nc_sid=1eb0c7&_nc_ohc=SkTYsz7pFDIAX83Dx3m&_nc_ht=scontent.fcwb2-2.fna&oh=d60e87f2db64e653b4e87d3172b2ddb7&oe=5F7A58BB" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/11960268_1014046558615593_1972434264799813720_n.png?_nc_cat=110&ccb=2&_nc_sid=1eb0c7&_nc_ohc=2QNprRF_HIcAX-0g5YQ&_nc_ht=scontent.fcwb2-2.fna&oh=4cad82735c05d8b62e55eb34b277db90&oe=5FC57E3B" alt="#" />
           </div>
         </a>
         <div class="resource-details">
