Update image link Code Signal

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3145,7 +3145,7 @@
       <li>
         <a href="https://codesignal.com/blog/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/19366636_1910380532550479_6227367408235417755_n.png?_nc_cat=106&_nc_sid=1eb0c7&_nc_ohc=mfbhJhhjdD0AX8cD7o5&_nc_ht=scontent.fcwb2-1.fna&oh=f076e28ee3f45736bb5bb233c2c3dd32&oe=5F7A9B82" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/119008774_2725600627695128_1040227185133532524_n.png?_nc_cat=106&ccb=2&_nc_sid=1eb0c7&_nc_ohc=StEm1U73ihkAX-QA3Ve&_nc_ht=scontent.fcwb2-1.fna&oh=3b494672aad289fb4c15bb4c40a415e1&oe=5FC79057" alt="#" />
           </div>
         </a>
         <div class="resource-details">
