--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3160,7 +3160,7 @@
       <li>
         <a href="https://www.webdesignerdepot.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/24862500_10155087920666451_2007059699721631428_n.png?_nc_cat=110&_nc_sid=1eb0c7&_nc_ohc=8kXAX5YD-rAAX-jB8hq&_nc_ht=scontent.fcwb2-2.fna&oh=c3f3c0c85238f309c6156957587ff2ad&oe=5F786E57" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/24862500_10155087920666451_2007059699721631428_n.png?_nc_cat=110&ccb=2&_nc_sid=1eb0c7&_nc_ohc=o_vT6FcFcBYAX-fupGU&_nc_ht=scontent.fcwb2-2.fna&oh=c727e475988ceb38ec9f63f904cc4142&oe=5FC78857" alt="#" />
           </div>
         </a>
         <div class="resource-details">
