Update image link Caelum Apostilas Online

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3568,7 +3568,7 @@
       <li>
         <a href="https://www.caelum.com.br/apostilas" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p148x148/82188689_10157257044689086_791244971490410496_o.png?_nc_cat=103&_nc_sid=1eb0c7&_nc_ohc=OrK7QneQil0AX95cPkS&_nc_ht=scontent.fcwb2-1.fna&oh=ab80e7dff1ca2baf2ac18f9f7668617d&oe=5F8AFF21" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/82188689_10157257044689086_791244971490410496_o.png?_nc_cat=103&ccb=2&_nc_sid=1eb0c7&_nc_ohc=7UiqZMWDBIsAX9R4kyz&_nc_ht=scontent.fcwb2-1.fna&oh=96a6305f680182552542d7e259b52af0&oe=5FC7B0D8" alt="#" />
           </div>
         </a>
         <div class="resource-details">
