Update image link Be Code

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3733,7 +3733,7 @@
       <li>
         <a href="https://becode.com.br/web-designer-x-desenvolvedor-web-entenda-a-diferenca/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/12507464_1505737369722638_8969977578519242296_n.png?_nc_cat=106&_nc_sid=dbb9e7&_nc_ohc=jxKJMySZD9MAX8kOvmF&_nc_ht=scontent.fcwb2-1.fna&oh=57f5d4c50afc4c4101d0e32eb4fe5609&oe=5EA265A3" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p148x148/12507464_1505737369722638_8969977578519242296_n.png?_nc_cat=106&ccb=2&_nc_sid=1eb0c7&_nc_ohc=r3ih8dqpsMwAX_bUJ7O&_nc_ht=scontent.fcwb2-1.fna&oh=a22dba900dabc07a9accca51bb08c5b1&oe=5FC668D6" alt="#" />
           </div>
         </a>
         <div class="resource-details">
