--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -490,6 +490,21 @@
         <a class="resource-button" href="https://www.hongkiat.com/blog/hashtag-tools-for-marketing/" target="_blank">Veja</a>
       </li>
       
+      <li>
+        <a href="https://www.atlassian.com/br/software/jira" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/10703722_10152715387648592_9110221371601185088_n.png?_nc_cat=108&_nc_sid=1eb0c7&_nc_ohc=zk_lICQKU2EAX_7XR2x&_nc_ht=scontent.fcwb2-2.fna&oh=145ffe4497f0c5be8fe80735ecd77ef6&oe=5F7F3728" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.atlassian.com/br/software/jira" target="_blank">Jira</a>
+          </h2>
+          <p>A principal ferramenta de desenvolvimento de software usada por equipes ágeis</p>
+        </div>
+        <a class="resource-button" href="https://www.atlassian.com/br/software/jira" target="_blank">Veja</a>
+      </li>
+      
       <div class="linha"></div>
         <h2 class="margen-titulo color-frontend">Pesquisa</h2>        
       <div class="linha"></div>
